[package]
authors = ["The Rust Project Developers"]
name = "panic_abort"
version = "0.0.0"

[lib]
path = "lib.rs"
test = false
bench = false
doc = false
crate_type=["rlib", "lib","dylib", "cdylib", "staticlib"]

[dependencies]
#core = { path = "../libcore" }
#libc = { path = "../rustc/libc_shim" }
libnx-rs = { path = "../../../libnx-rs"}
#compiler_builtins = { path = "../rustc/compiler_builtins_shim" }