[package]
authors = ["The Rust Project Developers"]
name = "panic_abort"
version = "0.0.0"

[lib]
path = "lib.rs"
test = false
bench = false
doc = false
crate_type=["rlib"]

[dependencies]
#core = { path = "../libcore" }
#libc = { path = "../rustc/libc_shim" }
#libnx-rs = { path = "../../../libnx-rs"}
#compiler_builtins = { path = "../rustc/compiler_builtins_shim" 

[target.aarch64-none-elf.dependencies]
libnx-rs = { git = "https://github.com/ischeinkman/libnx-rs"}
