[package]
authors = ["The Rust Project Developers"]
name = "std"
version = "0.0.0"
build = "build.rs"
license = "MIT/Apache-2.0"
repository = "https://github.com/rust-lang/rust.git"
description = "The Rust Standard Library"

[lib]
name = "std"
path = "lib.rs"
crate-type = ["dylib", "rlib"]

[dependencies]
#alloc = { git = "https://github.com/phil-opp/nightly-liballoc" }
#alloc_jemalloc = { path = "../liballoc_jemalloc", optional = true }
alloc_system = { git = "https://github.com/ischeinkman/libnx-rs-alloc_system" }
panic_unwind = { git = "https://github.com/ischeinkman/libpanic_unwind" }
panic_abort = { path = "../libpanic_abort" }
#core = { path = "../libcore" }
#libc = { path = "../rustc/libc_shim" }
#compiler_builtins = { path = "../rustc/compiler_builtins_shim" }
profiler_builtins = { path = "../libprofiler_builtins", optional = true }
unwind = { path = "../libunwind" }

[dev-dependencies]
rand = "0.4"


#TODO: Why is uncommenting this causing compile errors?
#[target.x86_64-apple-darwin.dependencies]
#rustc_asan = { path = "../librustc_asan" }
#rustc_tsan = { path = "../librustc_tsan" }

#[target.x86_64-unknown-linux-gnu.dependencies]
#rustc_asan = { path = "../librustc_asan" }
#rustc_lsan = { path = "../librustc_lsan" }
#rustc_msan = { path = "../librustc_msan" }
#rustc_tsan = { path = "../librustc_tsan" }

[target.aarch64-none-elf.dependencies]
libnx-rs = { git = "https://github.com/ischeinkman/libnx-rs", features = ["sysroot"]}


[build-dependencies]
cc = "1.0"

[features]
default = ["panic-unwind"]
#backtrace = []
#debug-jemalloc = ["alloc_jemalloc/debug"]
#jemalloc = ["alloc_jemalloc"]
force_alloc_system = []
panic-unwind = []
#profiler = ["profiler_builtins"]
wasm_syscall = []
